# cdpr_uav_ddrive_endition2

./: .gitignore  CMakeLists.txt  README.md  package.xml  test.md  实验进程.md
bash/: multi-ardupilot.sh  rc_multi_drone.sh  reset_params.sh  start_multi_drone.sh
launch/: multi-apm.launch  multi_drone.launch
plugins/: CMakeLists.txt  force_noiris_testPWM.cc  force_plugin.cc  force_plugin_backup.cc  force_plugin_backup2.cc  force_plugin_backup_drone1tanli.cc  force_plugin_backup_smallcone.cc  force_plugin_loggerOneTopic.cc  force_plugin_loggerOneTopic_2uav.cc  force_plugin_testPWM.cc  read.md  testforce.world  testforce_plugin_logger1.cc  testforce_plugin_origin.cc
scripts/: PIDClass.py  README.md  cmd_force.py  compute_payload_pos.py  experi_2dBA copy.py  experi_2dBA.py  experi_2dNOTA.py  experi_2dSA copy.py  experi_2dSA.py  experi_2dSA_origin.py  experi_3drone copy.py  experi_3drone.py  experi_computeTarget.py  fly.py  fly_multi.py  fly_multi_onetopic.py  fly_oneFour.py  fly_oneFourClear.py  optimizer.py  optimizer_oneOne.py  pidController.py  pwm2thrust.py  read3.md  requirements.txt  rotate.py  seaborn_plot.py  start_multi_mavros.sh  test_backup.py  test_backup7-15-10-23.py  test_gazeboSim.py  test_hz.py  test_mavlink.py  test_oneOne.py
worlds/: cable.world  ddrobot.world  experiment2dBigAverage.world  experiment2dNOTAverage.world  experiment2dSmallAverage.world  experiment3drone.world  multi_drone.world  multi_drone_logger.world  multi_drone_logger2.world  multi_drone_logger3.world  multi_drone_logger4.world  multi_drone_logger4_BACKUP.world  readme2.md  (+10 more)
(+67 files in other folders)
